--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -7,67 +7,67 @@ ul.action-list {
 
 	li	{
 		float: left;
-		
-		height: $smallUnit;
+
+		height: $verySmallUnit;
 		padding: 0 2rem;
 		overflow: hidden;
-		
+
 		list-style: none;
-		line-height: $smallUnit;
+		line-height: $verySmallUnit;
 		text-transform: uppercase;
 		letter-spacing: .04em;
-		
+
 		border: 1px solid transparent;
 		transition: all .3s;
-					
+
 		img, svg	{
 			display: block;
 			float: left;
-	
-			width: 2rem;
-			height: 2rem;
-			
-			margin-top: ($smallUnit - 2rem) / 2;	
+
+			width: 1.7rem;
+			height: 1.7rem;
+
+			margin-top: ($verySmallUnit - 1.7rem) / 2;
 			margin-right: 1rem;
 		}
-		
+
 		svg path, svg rect, svg circle, svg polygon	{
 			fill: $white;
 			transition: fill .3s;
 		}
-		
+
 		&:hover	{
 			cursor: pointer;
 			background-color: $grey5;
 			border-left: 1px solid $grey6;
 			border-right: 1px solid $grey6;
-			
-			
+
+
 			&:first-child	{
 				border-left-color: transparent;
 			}
-			
+
 			svg path, svg rect, svg circle, svg polygon	{
 				fill: $lightgreen;
 			}
 		}
-		
+
 		&.active	{
-			background-color: $grey5;	
+			background-color: $grey5;
 			border-left: 1px solid $grey6;
 			border-right: 1px solid $grey6;
-			
+
 			&:first-child	{
 				border-left-color: transparent;
 			}
-			
+
 			&:hover	{
 			}
-			
+
 			svg path, svg rect, svg circle, svg polygon	{
 				fill: $lightgreen;
 			}
-			
+
 		}
 	}
 }
@@ -79,69 +79,69 @@ ul.action-list {
 table:not(.no-data)	{
 	width: 100%;
 	//margin-top: 4rem;
-	
+
 	&.no-topspace {
 		margin-top: 0;
-	}	
-	
+	}
+
 	tr	{
 		border-bottom: 1px dotted $grey4;
-		
+
 		&:first-child	{
 			border-style: solid;
 		}
-		
+
 		&.no-border	{
 			border: none;
 		}
 	}
-	
+
 	th	{
 		text-align: left;
 		font-weight: 500;
-		
+
 		padding: .75rem 0;
 	}
-	
+
 	td	{
 		padding: 1rem;
 	}
 }
 
-table.data-table {	
-	th	{	
-		
+table.data-table {
+	th	{
+
 		&:nth-child(2)	{
 			padding: 0;
 			line-height: 3rem;
 			vertical-align: middle;
-		}	
-		
+		}
+
 		img	{ // Edit button
 			float: right;
 			width: 2rem;
 			height: 2rem;
 			cursor: pointer;
-			
+
 			opacity: .3;
 			transition: opacity .3s;
-			
+
 			&:hover	{
 				opacity: 1;
 			}
 		}
 	}
-	
+
 	td	{
 		padding: .5rem 0;
 		vertical-align: top;
-		
+
 		&:first-child	{
 			padding: 1rem 1rem 1rem 0;
 			width: 3 * $smallUnit;
 			color: $grey0;
 		}
-		
+
 		&.button	{
 			color: $white;
 			padding: 0;
@@ -153,16 +153,16 @@ table.list-table	{
 	td:last-child	{
 		text-align: right;
 	}
-	
+
 	tr	{
 		background-color: transparent;
 		transition: background-color .3s;
 	}
-	
+
 	tr:nth-child(even)	{
 		//background-color: $grey2;
 	}
-	
+
 	tr:not(:first-child):hover	{
 		cursor: pointer;
 		background-color: $grey1;
@@ -175,25 +175,25 @@ table.list-table	{
 
 select, input:not([type='checkbox']), textarea, button	{
 	width: 100%;
-	
+
 	font-family: inherit;
 	font-weight: inherit;
 	font-size: inherit;
 	line-height: 1em;
 	color: inherit;
-	
+
 	outline: none;
 	resize: none;
 	-webkit-appearance: none;
-	
+
 	padding: .5rem;
 
 	border-radius: 0px;
 	border: 1px solid $grey6;
 	background-color: $grey5;
-	
+
 	transition: background-color .3s;
-	
+
 	&:focus	{
 		background-color: $grey6;
 	}
@@ -208,7 +208,7 @@ select	{
 	background-size: 1.5rem;
 	background-position: 98% 50%;
 	background-repeat: no-repeat;
-	
+
 	&:hover	{
 		cursor: pointer;
 	}
@@ -219,7 +219,7 @@ button	{
 	padding: 1rem 2rem;
 	margin-top: 1rem;
 	line-height: 1em;
-	
+
 	border-radius: .5rem;
 	float: right;
 	transition: background-color .1s;
@@ -228,15 +228,15 @@ button	{
 	&:hover, &:focus	{
 		background-color: $lightgreen;
 	}
-	
+
 	&.danger:hover, &.danger:focus	{
-		background-color: $red;	
+		background-color: $red;
 	}
 }
 
 .switch	{
 	position: relative;
-	
+
 	input	{
 		position: absolute;
 		z-index: 2;
@@ -245,21 +245,21 @@ button	{
 		width: 100%;
 		height: 2.8rem;
 	}
-	
+
 	label	{
 		color: $grey2;
-		
+
 		position: relative;
 		display: block;
 		cursor: pointer;
-		
+
 		width: 100%;
 		height: 2.8rem;
 		padding: .5rem;
-		
+
 		border: 1px solid $grey6;
 		background-color: $grey6;
-		
+
 		span	{
 			display: block;
 			float: left;
@@ -267,7 +267,7 @@ button	{
 			text-align: center;
 		}
 	}
-	
+
 
 	input + label:before	{
 		color: $white;
@@ -281,13 +281,13 @@ button	{
 		top: 0px;
 		width: 50%;
 		height: 100%;
-		
+
 		transition: all .5s;
-		
+
 		content:"Unbestätigt";
 		left: 0px;
 	}
-	
+
 	input:checked + label:before	{
 		content: "Bestätigt";
 		left: 50%;
@@ -295,19 +295,19 @@ button	{
 
 }
 
-	
+
 .data:not(.editing)	{
 	input, textarea, select, .switch label,	.switch label:before{
 		background-color: transparent;
 		cursor: default;
-		
+
 		background: none;
 		border: 1px solid transparent;
-		
+
 		&:focus	{
 			background-color: inherit;
 		}
-	}		
+	}
 }
 
 /************************
@@ -324,7 +324,7 @@ button	{
 	left: 5px;
 	right: 20px;
 	z-index: 9;
-	
+
 	.iScrollIndicator	{
 		height: 100%;
 	}
@@ -336,7 +336,7 @@ button	{
 	top: 5px;
 	bottom: 5px;
 	z-index: 9;
-	
+
 	.iScrollIndicator	{
 		width: 100%;
 	}
