--- a/src/styles/_viewSchedule.scss
+++ b/src/styles/_viewSchedule.scss
@@ -1,51 +1,51 @@
 .schedule	{
-	
+
 	/************************
 	*		CENTER-MAIN		*
 	************************/
-	
+
 	.center-main .content	{
 		position: relative;
-		
+
 		display: flex;
 		flex-direction: column;
-		
+
 		overflow: hidden;
 	}
-	
+
 	.toolbar .date.not-today svg path	{
 		fill: $red;
 	}
-	
+
 	.scale	{
 		list-style: none;
 		position: absolute;
 	}
-	
+
 	.scale-time	{
 		width: $smallUnit;
 		padding-top: $smallUnit;
-		
+
 		float: left;
 		z-index: 1;
-		
+
 		text-align: center;
-		
+
 		background-color: $grey3;
 		border-right: 1px solid $grey4;
-		
+
 		li	{
 			height: 61px; /*6rem + 1px */;
 			margin-bottom: 59px /*6rem - 1px */;
-			padding-top: .5rem;	
+			padding-top: .5rem;
 			border-top: 1px solid $transparentwhite;
 			border-bottom: 1px dotted $transparentwhite;
-			
+
 			&:first-child	{
 				border-top: none;
 			}
 		}
-		
+
 		.now	{
 			position: absolute;
 			top: (14.61*120px) + 50px;
@@ -54,179 +54,179 @@
 			color: $grey6;
 			width: 100%;
 			height: auto;
-			padding: .3rem 0;	
+			padding: .3rem 0;
 		}
 	}
-	
+
 	.scale-rooms	{
-		height: $smallUnit;
-		width: 12 * $bigUnit;	
+		height: $verySmallUnit;
+		width: 12 * $bigUnit;
 		margin-left: 5rem;
 
 		background-color: $grey1;
 		border-bottom: 1px solid $grey3;
-		
+
 		li {
-			height: $smallUnit;
+			height: $verySmallUnit;
 			width: $bigUnit;
 			float: left;
-			
-			padding: 2.5rem 0 0 1rem;
-			
+
+			padding: 1.3rem 0 0 1rem;
+
 			abbr	{
 				opacity: .6;
-				
+
 				&:before	{
 					content: "· ";
 				}
 			}
-			
+
 			&.active	{
 				width: 4 * $bigUnit;
 			}
 		}
 	}
-	
+
 	.scale-overlay	{
 		height: $smallUnit;
 		width: $smallUnit;
 		background: linear-gradient($grey3 30%, transparent 130%);
-		
+
 		z-index: 2;
 	}
-	
+
 	.timetable-container	{
-		margin: 5rem 0 0 5rem;
+		margin: $verySmallUnit 0 0 $smallUnit;
 		overflow: hidden;
 		position: relative;
 	}
-	
+
 	.timetable	{
 		height: 24 * 12rem;
 		background-color: $grey1;
 	}
-	
+
 	.column	{
 		float: left;
 		width: $bigUnit;
 		height: 24 * 12rem;
-		
+
 		overflow: hidden;
 		display: flex;
 		flex-direction: row;
 		align-items: stretch;
-		
+
 		border-right: 1px solid $grey3;
-		
+
 		&.active	{
 			width: 4 * $bigUnit;
 		}
-		
+
 		.column-main	{
 			position: relative;
-			
+
 			width: $bigUnit;
 			height: 100%;
-			
+
 			flex-grow: 0;
 			flex-shrink: 0;
-			
+
 			hr	{
 				margin: 0;
-				
+
 				position: absolute;
 				width: 100%;
 
 				border-top: 1px solid $transparentwhite;
-				
+
 				&:nth-of-type(odd)	{
 					border-style: dotted;
 				}
 			}
-			
+
 			.now	{
 				position: absolute;
 				width: 100%;
 				top: (14.61*120px);
-				
+
 				border-top: 2px solid $white;
 			}
-			
+
 			.now-top	{
 				position: absolute;
 				width: $bigUnit - 2rem;
 				margin: 0 1rem;
 
 				top: (14.61*120px);
-				
+
 				border-top: 2px dotted $lesstransparentwhite;
 			}
 		}
-		
+
 		.column-details	{
 			width: 3 * $bigUnit;
-			
-			height: 500px;	
+
+			height: 500px;
 			overflow: hidden;
 			position: relative;
-	
+
 			flex-grow: 0;
 			flex-shrink: 0;
-			
+
 			background-color: $grey6;
-			
+
 			.iScrollVerticalScrollbar	{
 				right: 10px;
 				top: 10px;
 				bottom: 10px;
 			}
 		}
-		
+
 		&:last-child	{
 			border-right: none;
 		}
 	}
-	
+
 	.scale-rooms li, .timetable, .column	{
 		transition: width .5s;
 	}
-	
+
 	/************************
 	*		CENTER-SIDE		*
 	************************/
-	
+
 	.center-side	{
 		transition: width .6s;
-		
+
 		&.active	{
 			width: 5 * $bigUnit;
 		}
-		
-		.toolbar	{	
+
+		.toolbar	{
 			ul	{
 				width: 100%;
-			}		
-			
+			}
+
 			li	{
 				width: 100%;
 				border-right: none;
-				
+
 				svg	{
 					transform: rotate(0);
 					transition: transform .5s;
 				}
-				
+
 				&:hover	{
 					background-color: transparent;
 				}
-				
+
 				&.active	{
 					background-color: transparent;
-					
+
 					svg	{
 						transform: rotate(45deg);
 					}
-					
+
 					&:hover	{
 						svg path	{
 							fill: $red;
@@ -235,25 +235,25 @@
 				}
 			}
 		}
-		
+
 		.content	{
 			display: flex;
 			flex-direction: row;
 			align-items: stretch;
-			
+
 			.open-surgeries	{
 				flex-grow: 0;
 				flex-shrink: 0;
-				
+
 				width: $bigUnit;
 				overflow: hidden;
 				border-right: 1px solid $grey5;
-				
+
 				.new-card	{
 					transition: margin-top 1s;
 				}
 			}
-			
+
 			.add-surgery	{
 				flex-grow: 1;
 				flex-shrink: 0;
@@ -280,9 +280,9 @@
 	color: $grey0;
 	cursor: pointer;
 	overflow: hidden;
-	
+
 	box-shadow: 0px 0px 7px rgba(0,0,0,.25);
-	
+
 	.header	{
 		border-radius: 3px 3px 0 0;
 		padding: 1rem 1rem;
@@ -292,51 +292,51 @@
 		.name	{
 			font-weight: 500;
 		}
-		
+
 		img	{
 			float: right;
 			width: 2rem;
 			height: 2rem;
 		}
-		
+
 		.naht	{
 			opacity: 0;
 			transition: opacity 1s;
-			
+
 			&.active	{
 				opacity: 1;
 			}
 		}
-		
+
 		transition: background-color 1s;
 	}
-	
+
 	.main	{
 		padding: .7rem 1rem;
-		
+
 		.service	{
 			margin-bottom: .5rem;
 		}
 	}
-	
+
 	.footer	{
-		padding: 0 1rem 1rem 1rem;	
+		padding: 0 1rem 1rem 1rem;
 		position: absolute;
 		bottom: 0;
-		width: 100%;	
+		width: 100%;
 	}
-	
+
 	.handle	{
 		position: absolute;
 		height: 1rem;
 		width: 100%;
 	}
-	
+
 	.handle-top	{
 		top: 0;
 		cursor: ns-resize;
 	}
-	
+
 	.handle-bottom	{
 		bottom: 0;
 		cursor: ns-resize;
@@ -353,7 +353,7 @@
 			padding-bottom: 1rem;
 		}
 	}
-	
+
 	.card	{
 		cursor: default;
 	}
@@ -365,7 +365,7 @@
 
 .card-details-container	{
 	padding-bottom: $smallUnit/2;
-	
+
 	&:before	{
 		content: "";
 		position: absolute;
@@ -374,59 +374,59 @@
 		bottom: 0;
 		left: 0;
 		pointer-events: none;
-		box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,.5);	
+		box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,.5);
 		z-index: 10;
 	}
-	
+
 	.data	{
 		margin: $smallUnit;
 	}
-	
+
 	.header	{
 		padding: $smallUnit/2 $smallUnit;
 		margin-bottom: 3px;
-		
+
 		font-size: 1.5em;
 		line-height: 1.4em;
-			
+
 		.name {
 			font-weight: 500;
 		}
-		
+
 		img	{
 			margin-top: 1rem;
 			height: 3rem;
 			float: right;
 		}
-		
+
 		.naht	{
 			opacity: 0;
 			transition: opacity 1s;
-			
+
 			&.active	{
 				opacity: 1;
 			}
 		}
-		
+
 		transition: background-color 1s;
 	}
-	
+
 	.editing	{
 		input:focus, textarea:focus, select:hover	{
 			background-color: $grey3;
 		}
 	}
-	
+
 	.timestamps:not(.editing) .next	{
 		opacity: 0;
 		transition: opacity .3s;
-		
+
 		&:hover	{
 			opacity: 1;
 			cursor: pointer;
 		}
 	}
-	
+
 	/************************
 	*		Barchart 		*
 	************************/
@@ -436,7 +436,7 @@
 		.barchart-bars	{
 			height: 3rem;
 			overflow: hidden;
-			
+
 			div	{
 				height: 100%;
 				width: (100%/11);
@@ -444,11 +444,11 @@
 
 				transition: opacity .3s;
 				opacity: .5;
-				
+
 				&:hover, &.next:hover, &.highlight	{
 					opacity: 1;
 				}
-				
+
 				&.next:after	{
 					content: "Start";
 					opacity: 0;
@@ -458,21 +458,21 @@
 					line-height: 3rem;
 					cursor: pointer;
 				}
-				
+
 				&.next:hover:after	{
 					opacity: 1;
 				}
-				
+
 				&.inactive	{
 					opacity: .1;
 				}
 			}
-			
+
 			.state-4, .state-6, .state-8, .state-10, .state-11	{
 				border-left: 3px solid $grey6;
 			}
 		}
-		
+
 		.barchart-legend	{
 			text-align: center;
 			padding-top: 2rem;
@@ -488,58 +488,58 @@
 
 .add-surgery	{
 	width: 4 * $bigUnit;
-	
+
 	display: flex;
 	flex-direction: row;
 	align-items: stretch;
-	
+
 	.data	{
-		margin-top: $smallUnit;	
-		
+		margin-top: $smallUnit;
+
 		&:first-child	{
 			margin-top: 0;
-		}	
+		}
 	}
-	
+
 	.patient-data	{
 		width: 2 * $bigUnit;
 		flex-grow: 0;
 		flex-shrink: 1;
-		
+
 		overflow: auto;
-		
+
 
 		padding-left: $smallUnit;
 		padding-right: $smallUnit/2;
 		margin-top: $smallUnit/2;
 		margin-bottom: $smallUnit/2;
-		
+
 		border-right: 1px dotted $grey5;
-		
+
 	}
-	
+
 	.surgery-data	{
 		width: 2 * $bigUnit;
 		flex-grow: 0;
 		flex-shrink: 0;
-		
+
 		overflow: auto;
-		
+
 
 		padding-left: $smallUnit/2;
 		padding-right: $smallUnit;
 		margin-top: $smallUnit/2;
 		margin-bottom: $smallUnit/2;
 	}
-	
+
 	table	{
 		transition: opacity .5s;
 	}
-	
+
 	.inactive	{
 		opacity: .3;
 	}
-	
+
 	.hidden	{
 		display: none;
 	}
